2011-07-06  Ingo Renner  <ingo.renner@dkd.de>

	* Added garbage collection


	* Added support for Record Access Rootline Elements
	* Fixed an issue where empty facets were not detected correctly when using option showEmptyFacets
	* Added new marker ###FACET_LINK.FACET_NAME###
	* Fixed usage of extension key in DevLog calls
	* Moved method getSearch() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase
	* Moved method getCleanUserQuery() from tx_solr_pi_results to tx_solr_pluginbase_PluginBase
	* Added support for using a TypoScript path containing the link target parameter in the LINK and SOLRLINK viewhelpers (credits Timo Webler)
	* Updated SolrPhpClient to r60
	* Changed tx_solr_SolrService to use the new SolrPhpClient HTTP transport APIs
	* Fixed usage of (now) undefined class constant in tx_solr_SolrService caused by the update of SolrPhpClient
	* Changed logging for Solr POST requests to log request responses != 200 even when logging for POST is deactivated
	* Added logging for delete queries
	* Added an option to use curl as HTTP transport
	* Fixed issue #13091: Reduce Solr connection selection UI clutter
	* Added a class tx_solr_Site to use when dealing with site information, like site root, ttile, label and so on
	* Added method tx_solr_ConnectionManager::getConnectionsBySite()
	* Replaced occurrences of tx_solr_Util::getSiteHash() with tx_solr_Site->getSiteHash()
	* Changed the auto-complete script to now send a lowercased version of the term the user entered (renamed from term to termLowercase) and the original case version(termOriginal)
	* Removed option allowEmptyQuery
	* Added options initializeWithEmptyQuery, showResultsOfInitialEmptyQuery as replacement for allowEmptyQuery
	* Added methods setAlternativeQuery() and getAlternativeQuery() to tx_solr_Query
	* Fixed issue #13494: Facet link not working with empty query
	* Added tx_solr_Query::setQueryType() and tx_solr_Query::getQueryType()